Overview of changes in Glib::Object::Introspection 0.014
========================================================

* Implement generic signal marshalling.
* Implement a generic constructor for boxed types and install it as
  Glib::Boxed::new.
* Generate error messages when functions are passed an incorrect number of
  parameters.
* Avoid using vfunc names that coincide with special Perl subs.  This fixes
  double-frees occurring for subclasses of Gtk3::Widget.
* Rework the way fallback vfuncs are installed.
* Correctly marshal out/in-out args when invoking Perl code and fix some other
  related bugs.  This makes it possible to implement complicated interfaces
  such as Gtk3::TreeModel.
* Allow enums and flags to have class functions.
* Add API to manually convert between SVs and enums.
* Plug a few memory leaks.

Overview of changes in Glib::Object::Introspection 0.013
========================================================

* SV -> object: do some type checking
* Fix building with perl <= 5.14
* Convert invalid or void GTypes to undef.

Overview of changes in Glib::Object::Introspection 0.012
========================================================

* Support more struct types when writing fields.
* Handle disguised structures.
* Avoid invalid memory access during callback destruction.
* Use the correct allocator for caller-allocated boxed out-args.
* Add semi-private API wrapping gperl_register_boxed_synonym.

Overview of changes in Glib::Object::Introspection 0.011
========================================================

* Improve handling of boxed unions, like GdkEvent.
* Add support for building the test libs on MSWin32.
* Properly specify our dependencies.

Overview of changes in Glib::Object::Introspection 0.010
========================================================

* Correctly place the linker flags when building the test libs.
* Fix compilation of the test libs against recent gobject-introspection
* updated README file similar to Cairo (RT#74870)