@@ -42,6 +42,7 @@ t/interface-implementation.t
 t/objects.t
 t/structs.t
 t/values.t
-t/vfunc-implementation.t
+t/vfunc-chaining.t
+t/vfunc-ref-counting.t
 META.yml                                 Module YAML meta-data (added by MakeMaker)
 META.json                                Module JSON meta-data (added by MakeMaker)
