@@ -54,7 +54,7 @@ my %meta_merge = (
         },
         author              =>
             ['Glib::Object::Introspection Team <gtk-perl-list at gnome dot org>'],
-        release_status      => 'unstable', # FIXME?
+        release_status      => 'unstable',
         # valid values: https://metacpan.org/module/CPAN::Meta::Spec#license
         license             => 'lgpl_2_1',
         resources => {
