@@ -124,10 +124,19 @@ sv_to_interface (GIArgInfo * arg_info,
 		} else {
 			arg->v_pointer = gperl_get_object_check (sv, get_gtype (interface));
 		}
-		if (arg->v_pointer && transfer >= GI_TRANSFER_CONTAINER) {
-			g_object_ref (arg->v_pointer);
-			if (G_IS_INITIALLY_UNOWNED (arg->v_pointer)) {
-				g_object_force_floating (arg->v_pointer);
+		if (arg->v_pointer) {
+			GObject *object = arg->v_pointer;
+			if (transfer == GI_TRANSFER_NOTHING &&
+			    object->ref_count == 1 &&
+			    SvTEMP (sv) && SvREFCNT (SvRV (sv)) == 1)
+			{
+				cwarn ("*** Asked to hand out object without ownership transfer, "
+				       "but object is about to be destroyed; "
+				       "adding an additional reference for safety");
+				transfer = GI_TRANSFER_EVERYTHING;
+			}
+			if (transfer >= GI_TRANSFER_CONTAINER) {
+				g_object_ref (arg->v_pointer);
 			}
 		}
 		break;
@@ -151,7 +160,7 @@ sv_to_interface (GIArgInfo * arg_info,
 			name = g_base_info_get_name (interface);
 			namespace = g_base_info_get_namespace (interface);
 			package = get_package_for_basename (namespace);
-			parent_type = find_union_member_gtype (package, name);
+			parent_type = package ? find_union_member_gtype (package, name) : 0;
 			if (parent_type && parent_type != G_TYPE_NONE) {
 				arg->v_pointer = gperl_get_boxed_check (
 				                   sv, parent_type);
